--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Signe fyller femton!</title>
 	</head>
-	<body>
-		<p>UPDATE 6!</p>
+	<body bgcolor="0000FF">
+		
 	</body>
 </html>
