--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Signe fyller femton!</title>
 	</head>
-	<body bgcolor="a375ff">
-		
+	<body bgcolor="#a375ff">
+		<h1 color="#ff59e7">GRATTIS!</h1>
 	</body>
 </html>
