--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Signe fyller femton!</title>
 	</head>
 	<body bgcolor="#a375ff">
-		<h1 style="color:#ff59e7">GRATTIS!</h1>
+		<h1 style="color:#ce17c6">GRATTIS!</h1>
 	</body>
 </html>
