--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Signe fyller femton!</title>
 	</head>
 	<body bgcolor="#a375ff">
-		<p style="color:#ce17c6;font-size=17">GRATTIS!</h1>
+		<h1 style="color:#ce17c6;size=17">GRATTIS!</h1>
 	</body>
 </html>
