--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>Signe fyller femton!</title>
 	</head>
 	<body bgcolor="#a375ff">
-		<p style="color:#ce17c6;font-size:46px;text-align:middle;">GRATTIS!</p>
+		<p style="color:#ce17c6;font-size:46px;text-align:center;">GRATTIS!</p>
 	</body>
 </html>
