--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Signe fyller femton!</title>
 	</head>
-	<body background="/party.png">
+	<body background="./party.png">
 		<p style="color:#ce17c6;font-size:64px;text-align:center;position: relative;top:-40px;">GRATTIS!</p>
 	</body>
 </html>
