--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body background="./party.png">
 		<p style="color:#ce17c6;font-size:64px;text-align:center;position:relative;top:-40px;text-shadow:3px 3px 0px #000000;">GRATTIS!</p>
-		<p style="color:#a1079a;font-size:50px;text-align:center;position:relative;text-shadow:2px 2px 0px #000000">Grattis på födelsedagen, Signe!</p>
+		<p style="color:#0ad4ff;font-size:50px;text-align:center;position:relative;text-shadow:2px 2px 0px #000000">Grattis på födelsedagen, Signe!</p>
 	</body>
 </html>
