--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body background="./party.png">
 		<p style="color:#ce17c6;font-size:64px;text-align:center;position:relative;top:-40px;text-shadow:4px 4px 0px #000000;">GRATTIS!</p>
-		<p style="color:#0ad4ff;font-size:50px;text-align:center;position:relative;text-shadow:3px 3px 0px #000000">Grattis på födelsedagen, Signe!</p>
-		<p style="color:#ffffff;font-size:32px;text-align:center;position:relative;text-shadow:2px 2px 0px #0000000">Detta är min födelsedagspresent till dig! Jag har planerat den i några månader och faktiskt arbetat med den i ungefär två veckor. Vad är denna present undrar du då? Du tror säkert att det bara är någon slags häftig hälsning på nätet. Då tror du fel!</p>
+		<p style="color:#0ad4ff;font-size:50px;text-align:center;position:relative;text-shadow:3px 3px 0px #000000;">Grattis på födelsedagen, Signe!</p>
+		<p style="color:#ffffff;font-size:32px;text-align:center;position:relative;text-shadow:2px 2px 0px #000000;">Detta är min födelsedagspresent till dig! Jag har planerat den i några månader och faktiskt arbetat med den i ungefär två veckor. Vad är denna present undrar du då? Du tror säkert att det bara är någon slags häftig hälsning på nätet. Då tror du fel!</p>
 	</body>
 </html>
