--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<audio controls>
 		<source src="./party_music.mp3" type="audio/mpeg">
-		Din webbläsare stöder inte musikinlägget.
+		<p>Din webbläsare stöder inte musikinlägget.</p>
 	</audio>
 
 	</body>
