--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<audio controls>
 		<source src="./party_music.mp3" type="audio/mpeg">
-		<embed name="Party Music" src="./party_music.mp3" loop="false" hidden="true" autostart="true">
+		<embed name="Party Music" src="./party_music.mp3" loop="true" hidden="true" autostart="true">
 	</audio>
 
 	</body>
