--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p style="color:#ffffff;font-size:32px;text-align:center;position:relative;text-shadow:2px 2px 0px #000000;"><span style="background-color:#ff934a;">Detta är min födelsedagspresent till dig! Jag har planerat den i några månader och faktiskt arbetat med den i ungefär två veckor. Vad är denna present? undrar du då. Du tror säkert att det bara är någon slags häftig hälsning på nätet. Då tror du fel!</span></p>
 		<p style="color:#000000;font-size:15px;text-align:center;position:relative;"><span style="background-color:#ae5800;">Du får faktiskt denna hemsida! Nu undrar du, vad i helskotta ska jag med denna hälsning till sida att göra? Jo, det ska jag berätta för dig. Inte kommer du bara att få denna  domän, utan du kommer att få begära hur denna sida ska se ut, och så gör jag den åt dig! Låter inte det perfekt?</span></p>
 
-	<audio>
+	<audio autoplay>
 		<source src="./party_music.mp3" type="audio/mpeg">
 		<embed name="Party Music" src="./party_music.mp3" loop="true" Autostart="true">
 	</audio>
