--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>Signe fyller femton!</title>
 	</head>
-	<body background="./party.png">
+	<body background="./party.png" height=2000>
 		<p style="color:#ce17c6;font-size:64px;text-align:center;position:relative;top:-40px;text-shadow:4px 4px 0px #000000;"><span style="background-color:#f0a6ed;">GRATTIS!</span></p>
 		<p style="color:#0ad4ff;font-size:50px;text-align:center;position:relative;text-shadow:3px 3px 0px #000000;"><span style="background-color:#4a8edb;">Grattis på födelsedagen, Signe!</span></p>
 		<p style="color:#ffffff;font-size:32px;text-align:center;position:relative;text-shadow:2px 2px 0px #000000;"><span style="background-color:#ff934a;">Detta är min födelsedagspresent till dig! Jag har planerat den i några månader och gjorde den för två veckor sedan. 'Vad är denna present?' undrar du då. Du tror säkert att det bara är någon slags häftig hälsning på nätet. Då tror du fel!</span></p>
